--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>My Website Home Page</title>
+    <title>WalkMeUp Home Page</title>
 </head>
 <body>
-  <h1>Welcome to my website</h1>
-  <p>Now hosted on -- github --!</p>
+  <h1>Welcome to WalkMeUp</h1>
 </body>
 </html>
