--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>WalkMeUp Home Page</title>
 </head>
 <body>
-  <h1>Welcome to WalkMeUp!?</h1>
+  <h1>Welcome to WalkMeUp!</h1>
+  <p>Loading...</p>
 </body>
 </html>
